fix: allow all Vercel preview domains in CORS origin patterns
Use allowedOriginPatterns for https://*.vercel.app and localhost to fix 403 Invalid CORS request on production login.

Co-authored-by: Cursor <cursoragent@cursor.com>